microservices/service-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        owner: sre
        version: v1
    spec:
      containers:
        - name: service-b
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Service B"
          ports:
            - containerPort: 8080
