microservices/service-b/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b
  namespace: default
spec:
  host: service-b
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
