microservices/service-b/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
    - "*"
  gateways:
    - sre-gateway
  http:
    - match:
        - uri:
            prefix: /service-b
      rewrite:
        uri: ""       # forward to pod root
      route:
        - destination:
            host: service-b
            subset: v1
            port:
              number: 80
